--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,17 @@
+* {
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+body,
+html {
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+}
+
 body {
     background-color: grey;
 }
