--- a/css/style.css
+++ b/css/style.css
@@ -83,4 +83,9 @@ p {
         font-size: 14px;
         padding: 5px 10px;
     }
+
+    .logo {
+        height: 50px;
+        width: 50px;
+    }
 }
