--- a/css/style.css
+++ b/css/style.css
@@ -79,12 +79,19 @@ p {
 }
 
 @media only screen and (max-width: 600px) {
+
+    body,
+    html {
+        overflow: auto;
+    }
+
     .btn-custom {
         font-size: 14px;
         padding: 5px 10px;
     }
 
     .logo {
+        margin-top: 40%;
         height: 50px;
         width: 50px;
     }
